.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/SalesIQ__SVOC_Request__c.object
<CustomObject>
    <fields>
        <fullName>SalesIQ__Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SVOC Requests</relationshipLabel>
        <relationshipName>SVOC_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Account_Status__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>In business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Assigned_Territories__c</fullName>
        <label>Assigned Territories</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Case_Id__c</fullName>
        <label>Case Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Lot_Size_New__c</fullName>
        <label>Lot Size(New Cars)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Lot_Size_Used__c</fullName>
        <label>Lot Size(Used Cars)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Percentage_Discount__c</fullName>
        <label>Percentage Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Position_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position Account</label>
        <referenceTo>SalesIQ__Position_Account__c</referenceTo>
        <relationshipLabel>SVOC Requests</relationshipLabel>
        <relationshipName>SVOC_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Primary_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SVOC Requests</relationshipLabel>
        <relationshipName>SVOC_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Request_Type__c</fullName>
        <label>Request Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__SVOC_Status__c</fullName>
        <label>SVOC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesIQ__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SVOC_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SVOC Request</label>
    <listViews>
        <fullName>SalesIQ__All</fullName>
        <columns>NAME</columns>
        <columns>SalesIQ__Account_Name__c</columns>
        <columns>SalesIQ__Account_Status__c</columns>
        <columns>SalesIQ__Lot_Size_New__c</columns>
        <columns>SalesIQ__Lot_Size_Used__c</columns>
        <columns>SalesIQ__Primary_Account__c</columns>
        <columns>SalesIQ__Comments__c</columns>
        <columns>SalesIQ__SVOC_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SalesIQ__SVOC_Request</fullName>
        <columns>NAME</columns>
        <columns>SalesIQ__Account_Name__c</columns>
        <columns>SalesIQ__Account_Status__c</columns>
        <columns>SalesIQ__Lot_Size_Used__c</columns>
        <columns>SalesIQ__Lot_Size_New__c</columns>
        <columns>SalesIQ__Primary_Account__c</columns>
        <columns>SalesIQ__Comments__c</columns>
        <columns>SalesIQ__SVOC_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>SVOC Request</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>SVOC ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SVOC Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>